--- a/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Home/Index.cshtml
@@ -13,7 +13,8 @@
         new { Controller = "Category", Action = "Index", Icon = "fas fa-tags", Title = "Categories", Count = ViewBag.CategoryCount },
         new { Controller = "Articles", Action = "Index", Icon = "fas fa-file-alt", Title = "Articles", Count = ViewBag.ArticleCount },
         new { Controller = "Home", Action = "GetCustomers", Icon = "fas fa-users", Title = "Users", Count = ViewBag.UserCount },
-        new { Controller = "Order", Action = "Index", Icon = "fas fa-shopping-cart", Title = "Orders", Count = ViewBag.OrderCount }
+        new { Controller = "Order", Action = "Index", Icon = "fas fa-shopping-cart", Title = "Orders", Count = ViewBag.OrderCount },
+        new { Controller = "Offers", Action = "Index", Icon = "fas fa-tag", Title = "Offers", Count = ViewBag.OffersCount }
         })
         {
             <div class="col-md-4">
