--- a/ProductCatalog-Web/Areas/Admin/Views/Role/EditRole.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Role/EditRole.cshtml
@@ -4,27 +4,35 @@
     ViewData["Title"] = "EditRole";
 }
 
-<h1>EditRole</h1>
+<head>
+    <link href="~/css/Admin/Role/editRole.css" rel="stylesheet" asp-append-version="true" />
+</head>
 
-<h4>RoleVM</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="EditRole">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="RoleName" class="control-label"></label>
-                <input asp-for="RoleName" class="form-control" />
-                <span asp-validation-for="RoleName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Edit Role</h1>
+
+    <hr />
+
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form asp-action="EditRole">
+                <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+
+                <div class="form-group mb-4">
+                    <label asp-for="RoleName" class="control-label font-weight-bold">Role Name</label>
+                    <br />
+                    <input asp-for="RoleName" class="form-control p-3" placeholder="Enter the role name" />
+                    <span asp-validation-for="RoleName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary btn-block p-3" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="text-center mt-4">
+        <a asp-action="Index" class="btn btn-outline-secondary p-3">Back to List</a>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
