--- a/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
 
     <footer class="footer bg-light text-center text-muted py-3">
         <div class="container">
-            &copy; 2025 - ProductCatalog - Content Manager Panel
+            &copy; @DateTime.Now.Year - ExhibitShop - Content Manager Panel
         </div>
     </footer>
 
