--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/QuestionType/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/QuestionType/Edit.cshtml
@@ -31,10 +31,13 @@
                     </div>
 
                     <div class="mb-3">
-                        <label asp-for="Status" class="form-label fw-bold">Status</label>
-                        <select asp-for="Status" class="form-select" asp-items="Html.GetEnumSelectList<Status>()"></select>
-                        <option value="Passive">Passive</option>
-                        <option value="Active">Active</option>
+                        <label asp-for="Status" class="form-label"></label>
+                        <select asp-for="Status" class="form-select">
+                            <option value="">-- Select Status --</option>
+                            <option value="Passive">Passive</option>
+                            <option value="Active">Active</option>
+                        </select>
+                        <span asp-validation-for="Status" class="text-danger"></span>
                     </div>
 
                     <div class="d-flex justify-content-between">
