--- a/ProductCatalog-Web/Views/Order/ShippingStatus.cshtml
+++ b/ProductCatalog-Web/Views/Order/ShippingStatus.cshtml
@@ -9,7 +9,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow-lg border-0">
-                <div class="card-header bg-gradient text-white text-center">
+                <div class="card-header bg-gradient text-center">
                     <h3><i class="bi bi-truck"></i> Track Your Order</h3>
                 </div>
                 <div class="card-body">
