--- a/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Edit.cshtml
@@ -5,87 +5,81 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 style="text-align:center;" class="mb-4">Edit Article</h1>
 
-<h4>Article</h4>
 <hr />
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 offset-md-2">
         <form asp-action="Edit" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+            <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="form-label">Article Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Introduction" class="control-label"></label>
+
+            <div class="form-group mb-3">
+                <label asp-for="Introduction" class="form-label">Introduction</label>
                 <textarea asp-for="Introduction" class="form-control" id="introduction"></textarea>
                 <span asp-validation-for="Introduction" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Development" class="control-label"></label>
+
+            <div class="form-group mb-3">
+                <label asp-for="Development" class="form-label">Development</label>
                 <textarea asp-for="Development" class="form-control" id="development"></textarea>
                 <span asp-validation-for="Development" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Conclusion" class="control-label"></label>
+
+            <div class="form-group mb-3">
+                <label asp-for="Conclusion" class="form-label">Conclusion</label>
                 <textarea asp-for="Conclusion" class="form-control" id="conclusion"></textarea>
                 <span asp-validation-for="Conclusion" class="text-danger"></span>
             </div>
+
             <script src="https://cdn.tiny.cloud/1/1kxyrsdra6gg5wpiu45o5vpbsh5fq5glysoowx0x5zc96i0m/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
             <script src="~/js/ContentManager/Articles/edit.js" asp-append-version="true"></script>
-            <div class="form-group mb-3">
-                <label asp-for="ImageUrl1" class="form-label fw-bold">
-                    <i class="fas fa-image"></i> Upload Image
-                </label>
 
+            <div class="form-group mb-3">
+                <label asp-for="ImageUrl1" class="form-label fw-bold"><i class="fas fa-image"></i> Upload Image 1</label>
                 @if (!string.IsNullOrEmpty(Model.ImageUrl1))
                 {
                     <div>
-                        <img src="~/img/@Model.ImageUrl1" alt="Image1" class="img-fluid" />
-                        <br />
+                        <img src="~/img/@Model.ImageUrl1" alt="Image1" class="img-fluid mb-2" />
+                        <input type="hidden" name="existingImage1" value="@Model.ImageUrl1" />
                     </div>
-                    <input type="hidden" name="existingImage1" value="@Model.ImageUrl1" />
                 }
-
                 <input type="file" name="file1" class="form-control" />
                 <span asp-validation-for="ImageUrl1" class="text-danger"></span>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="ImageUrl2" class="form-label fw-bold">
-                    <i class="fas fa-image"></i> Upload Image
-                </label>
 
+            <div class="form-group mb-3">
+                <label asp-for="ImageUrl2" class="form-label fw-bold"><i class="fas fa-image"></i> Upload Image 2</label>
                 @if (!string.IsNullOrEmpty(Model.ImageUrl2))
                 {
                     <div>
-                        <img src="~/img/@Model.ImageUrl2" alt="Image1" class="img-fluid" />
-                        <br />
+                        <img src="~/img/@Model.ImageUrl2" alt="Image2" class="img-fluid mb-2" />
+                        <input type="hidden" name="existingImage2" value="@Model.ImageUrl2" />
                     </div>
-                    <input type="hidden" name="existingImage2" value="@Model.ImageUrl2" />
                 }
-
                 <input type="file" name="file2" class="form-control" />
                 <span asp-validation-for="ImageUrl2" class="text-danger"></span>
             </div>
-            <div class="form-group mb-3">
-                <label asp-for="ImageUrl3" class="form-label fw-bold">
-                    <i class="fas fa-image"></i> Upload Image
-                </label>
 
+            <div class="form-group mb-3">
+                <label asp-for="ImageUrl3" class="form-label fw-bold"><i class="fas fa-image"></i> Upload Image 3</label>
                 @if (!string.IsNullOrEmpty(Model.ImageUrl3))
                 {
                     <div>
-                        <img src="~/img/@Model.ImageUrl3" alt="Image1" class="img-fluid" />
-                        <br />
+                        <img src="~/img/@Model.ImageUrl3" alt="Image3" class="img-fluid mb-2" />
+                        <input type="hidden" name="existingImage3" value="@Model.ImageUrl3" />
                     </div>
-                    <input type="hidden" name="existingImage3" value="@Model.ImageUrl3" />
                 }
-
                 <input type="file" name="file3" class="form-control" />
                 <span asp-validation-for="ImageUrl3" class="text-danger"></span>
             </div>
+
             <div class="form-group mb-3">
                 <label asp-for="Status" class="form-label fw-bold"><i class="fas fa-toggle-on"></i> Status</label>
                 <select asp-for="Status" class="form-select">
@@ -94,20 +88,20 @@
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary btn-lg w-100">Save Changes</button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="mt-4 text-center">
+    <a asp-action="Index" class="btn btn-link">Back to List</a>
 </div>
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-
     }
 }
