--- a/ProductCatalog-Web/Views/Account/Login.cshtml
+++ b/ProductCatalog-Web/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 
                     <div class="form-floating mb-3">
                         <input asp-for="Email" class="form-control" placeholder="name@example.com" />
-                        <label asp-for="Email">Email address</label>
+                        <label asp-for="Email">Email Address</label>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
