--- a/ProductCatalog-Web/Views/Account/Register.cshtml
+++ b/ProductCatalog-Web/Views/Account/Register.cshtml
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="form-group mb-3">
-                        <label asp-for="Email" class="control-label">E-Mail</label>
+                        <label asp-for="Email" class="control-label">Email</label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
