--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Product Catalog - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - ExhibitShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
